- Consolidated weapon category improvement logic into reusable GetWeaponCategoryImprovements() methods
- Refactored AP and damage calculations to use new consolidated improvement methods
- Fixed custom books not being exposed to the UI for configuration of PDF parameters. Note that this requires that the custom book be mapped to a CharacterSettings file.
- Fixed Cyrillic text not working correctly when searching due to case conversion. 
- Implemented a bonus type (cyberlimbattributebonus) to provide AGI or STR bonuses to cyberware attribute bonuses. Example behaviour:

<!-- Simple values -->
<cyberlimbattributebonus>
    <name>STR</name>
    <val>2</val>
</cyberlimbattributebonus>

<!-- Rating-based values -->
<cyberlimbattributebonus>
    <name>AGI</name>
    <val>{Rating}</val>
</cyberlimbattributebonus>

<!-- FixedValues arrays -->
<cyberlimbattributebonus>
    <name>STR</name>
    <val>[1,2,3,4,5]</val>
</cyberlimbattributebonus>

<!-- Character attribute expressions -->
<cyberlimbattributebonus>
    <name>AGI</name>
    <val>{STR}/2</val>
</cyberlimbattributebonus>

<!-- Complex mathematical expressions -->
<cyberlimbattributebonus>
    <name>STR</name>
    <val>({Rating} * 2) + 1</val>
</cyberlimbattributebonus>

Data Changes:
- Corrected the categories (and therefore also mounts, concealabilities, and ranges) for the Krime AKM-SU97, the Krime Ditch, the Krime Stopper-II, the Krime Soldier, and the Krime Ripper as per forum errata found here: https://jackpoint.live/index.php?topic=31750.msg544923#msg544923.
- Vocal Expansion can now properly only be taken at Betaware, Deltaware, or Gammaware grades and now properly adds conditional limit modifiers. Existing characters with this bioware will need to reapply improvements to get these bonuses.
- Internal Synthlink now doubles the cost of the instrument into which it is taken instead of adding double the cost to the instrument. This is based on the way Internal Smartgun's cost is described in the core rulebook.