@@ -1,0 +1,86 @@
+# vehicles.xml
+
+vehicles.xml (and custom_vehicles.xml, see [Custom Data Files](Custom-Data-Files)) contains all of the information for Vehicles and Drones.
+
+# Structure
+
+[**categories**](#categories "categories") describes the different Categories of Vehicles.
+
+[**modcategories**](#modcategories "modcategories") describes the different Categories of Vehicle Modifications.
+
+[**vehicles**](#vehicles "vehicles") nodes describe the individual Vehicles.
+
+[**mods**](#mods "mods") nodes describe Vehicle Modifications.
+
+## <a id="categories"></a>Categories Node
+
+**category** (required): the name of the Vehicle Category. This list populates the Category list found in the Select Vehicle window. Categories are used to group Vehicles into groups such as _Groundcraft_, _Aircraft_, and _Drones_.
+
+## <a id="modcategories"></a>Mod Categories Node
+
+**category** (required): the name of the Vehicle Modification Category. This list populates the Category list found in the Select Vehicle Modification window.
+
+## <a id="vehicles"></a>Vehicle Node
+
+**id** (required): the internal name of the Vehicle. All ID fields are standard GUIDs, which can be generated by [external websites](https://www.guidgenerator.com) or plugins.
+
+**name** (required): the name of the Vehicle.
+
+**category** (required): the Category that this Vehicle belongs to. This must match one of the Categories defined in the [**Categories** Node](#categories "Categories Node").
+
+**source** (required): the code for the Sourcebook that this entry comes from. See [books.xml](Books "books.xml").
+
+**page** (required): the page number this item can be found on in the Sourcebook.
+
+**handling** (required): the Vehicle's Handling attribute.
+
+**speed** (required): the Vehicle's Speed attribute.
+
+**accel** (required): the Vehicle's Acceleration attribute.
+
+**body** (required): the Vehicle's Body attribute.
+
+**armor** (required): the Vehicle's Armor attribute.
+
+**pilot** (required): the Vehicle's Pilot attribute.
+
+**sensor** (required): the Vehicle's Sensor attribute.
+
+**avail** (required): the Availability of the Vehicle.
+
+**cost** (required): the Cost of the Vehicle.
+
+## <a id="mods"></a>Vehicle Modification Node
+
+**id** (required): the internal name of the Vehicle Modification. All ID fields are standard GUIDs, which can be generated by [external websites](https://www.guidgenerator.com) or plugins.
+
+**name** (required): the name of the Vehicle Modification.
+
+**category** (required): the Category that this Vehicle Modification belongs to. This must match one of the Categories defined in the [**Mod Categories** Node](#modcategories "Mod Categories Node").
+
+**source** (required): the code for the Sourcebook that this entry comes from. See [books.xml](Books "books.xml").
+
+**page** (required): the page number this item can be found on in the Sourcebook.
+
+**avail** (required): the Availability of the Vehicle Modification.
+
+**cost** (required): the Cost of the Vehicle Modification.
+
+**rating** (required): the Rating of the Vehicle Modification.
+
+**slots** (required): the number of modification slots this Vehicle Modification uses.
+
+**capacity** (optional): the Capacity provided by this Vehicle Modification.
+
+**conditionmonitor** (optional): the Condition Monitor bonus/penalty provided by this Vehicle Modification.
+
+**downgrade** (optional): if present, indicates this Vehicle Modification is a downgrade for drone attributes.
+
+**useownattributesforweapon** (optional): if set to `True`, indicates that weapons mounted in this drone arm should use the arm's own Agility attribute instead of the vehicle's Pilot Rating for Agility-based tests. This implements the rule from Rigger 5, p125 that states: "If the drone is using the arm for a test that would normally be Agility-based, use the limb's Agility, rather than the drone's Pilot Rating."
+
+**subsystems** (optional): defines which cyberware subsystems can be installed in this Vehicle Modification. Contains one or more **subsystem** elements.
+
+**required** (optional): defines requirements that must be met for this Vehicle Modification to be available. See [required nodes](Custom-Data-Files#required-nodes "Custom Data Files").
+
+**optionaldrone** (optional): if present, indicates this Vehicle Modification is optional for drones.
+
