@@ -142,7 +142,8 @@ Application Changes:
 - Consolidated weapon category improvement logic into reusable GetWeaponCategoryImprovements() methods
 - Refactored AP and damage calculations to use new consolidated improvement methods
 - Fixed custom books not being exposed to the UI for configuration of PDF parameters. Note that this requires that the custom book be mapped to a CharacterSettings file.
-- Fixed Cyrillic text not working correctly when searching due to case conversion. 
+- Fixed Cyrillic text not working correctly when searching due to case conversion.
+- Added functionality for the Drone Arm from Rigger 5 to use its own Agility for weapon skill tests rather than Pilot when using the DogBrain mode. This is controlled using the useownattributesforweapon element. Due to this, existing characters with the Drone Arm will need to remove and re-add the Drone Arm to have it function correctly, or manually edit the chum5 file.
 - Implemented a bonus type (cyberlimbattributebonus) to provide AGI or STR bonuses to cyberware attribute bonuses. Example behaviour:
 
 <!-- Simple values -->
